# internal/application/app.go
@@ -24,6 +24,7 @@ type Queries struct {
 	GetOverview     *queries.GetOverviewHandler
 	ListSessions    *queries.ListSessionsHandler
 	ListUsers       *queries.ListUsersHandler
+	PingConnection  *queries.PingConnectionHandler
 }
 
 type Commands struct {
@@ -49,6 +50,7 @@ func NewApp(repos Repositories, crypto domain.Cryptographer) *App {
 			GetOverview:     queries.NewGetOverviewHandler(repos.Connection, crypto, repos.Gateways),
 			ListSessions:    queries.NewListSessionsHandler(repos.Connection, crypto, repos.Gateways),
 			ListUsers:       queries.NewListUsersHandler(repos.Connection, crypto, repos.Gateways),
+			PingConnection:  queries.NewPingConnectionHandler(repos.Connection, crypto, repos.Gateways),
 		},
 		Commands: Commands{
 			CreateConnection: commands.NewCreateConnectionHandler(repos.Connection, crypto),
